# platform.adaptation.samsung_exynos.libtbm-exynos

./: AUTHORS  configure.ac
android/: libtbm-android-0.9.0.spec
packaging/: libtbm-dumb.spec  libtbm-exynos.spec  libtbm-shm.spec
src/: Makefile.am  tbm_bufmgr_android.c  tbm_bufmgr_dumb.c  tbm_bufmgr_exynos.c  tbm_bufmgr_shm.c
